--- a/Separate_Client/package.json
+++ b/Separate_Client/package.json
@@ -10,8 +10,10 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "element-plus": "^2.3.7",
     "pinia": "^2.1.3",
     "vue": "^3.3.4",
+    "vue-axios": "^3.5.2",
     "vue-router": "^4.2.2"
   },
   "devDependencies": {
@@ -21,6 +23,8 @@
     "eslint": "^8.39.0",
     "eslint-plugin-vue": "^9.11.0",
     "prettier": "^2.8.8",
+    "unplugin-auto-import": "^0.16.4",
+    "unplugin-vue-components": "^0.25.1",
     "vite": "^4.3.9"
   }
 }
