--- a/Separate_Client/package.json
+++ b/Separate_Client/package.json
@@ -10,6 +10,8 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.1.0",
+    "axios": "^1.4.0",
     "element-plus": "^2.3.7",
     "pinia": "^2.1.3",
     "vue": "^3.3.4",
